--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
