--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.21.2",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.9.6",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
